--- a/index.html
+++ b/index.html
@@ -68,11 +68,18 @@
             width:30px;
 
         }
-.SpriteIcons{
-    background-image: url("/img/sprite.png");
-    border:0;width:20px;height:20px;
-    display:inline-block
+.icon-green:after{
+    background-image: url("img/zelena.png");
 }
+
+.icon-gray:after{
+    background-image: url("img/siva.png");
+}
+
+.icon-blue:after{
+    background-image: url("css/images/icons-png/arrow-l-black.png");
+}
+
 .SpriteIcons.MachineOnline{
     background-position:-66px -23px
 }
