--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 }
 
 .icon-blue:after{
-    background-image: url("css/images/icons-png/arrow-l-black.png");
+    background-image: url("img/blue.png");
 }
 
 .SpriteIcons.MachineOnline{
