--- a/jPlayer/examples/pink.flag/demo-01.htm
+++ b/jPlayer/examples/pink.flag/demo-01.htm
@@ -11,31 +11,36 @@
 <script type="text/javascript">
 //<![CDATA[
 $(document).ready(function(){
-    var prvi = null;
-    var drugi = null;
-    function start(){
-        $(prvi).jPlayer("setMedia", {
-            title: "3019",
-            mp3:"http://server.enamedia.ba/api/stream/3019"
-        });
-        $(prvi).jPlayer("play");
-        setTimeout(function(){
-
-            $(drugi).jPlayer("play");
-        },30000)
+    var playerA = null;
+    var playerB = null;
+    var index = 0;
+    var song = function(i){
+        return {
+            title: "300",
+            mp3: "http://server.enamedia.ba/api/stream/300"+i
+            }
     }
-function startdrugi(){
-    $(drugi).jPlayer("setMedia", {
-        title: "3020",
-        mp3:"http://server.enamedia.ba/api/stream/3020"
-    });
-}
-	$("#jquery_jplayer_1").jPlayer({
+
+
+
+    function start(){
+        if(playerA && playerB){
+        $(playerA).jPlayer("setMedia", new song(index++));
+        $(playerA).jPlayer("play");
+    }
+
+    }
+
+   	$("#jquery_jplayer_1").jPlayer({
         play: function() {
             $(this).jPlayer("pauseOthers"); // pause all players except this one.
+            $(playerB).jPlayer("setMedia",new song(index++));
+            setTimeout(function(){
+                $(playerB).jPlayer("play");
+            },30000)
         },
         ready: function (event) {
-            prvi = this;
+            playerA = this;
             start();
         },
         swfPath: "../../dist/jplayer",
@@ -53,10 +58,14 @@ function startdrugi(){
     $("#jquery_jplayer").jPlayer({
         play: function() {
             $(this).jPlayer("pauseOthers"); // pause all players except this one.
+            $(playerA).jPlayer("setMedia",new song(index++));
+            setTimeout(function(){
+                $(playerA).jPlayer("play");
+            },30000)
         },
         ready: function (event) {
-            drugi = this;
-            startdrugi();
+            playerB = this;
+            start();
         },
         swfPath: "../../dist/jplayer",
         supplied: "mp3",
@@ -76,42 +85,7 @@ function startdrugi(){
 <body>
 <div id="jquery_jplayer" class="jp-jplayer"></div>
 <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
-	<div class="jp-type-single">
-		<div class="jp-gui jp-interface">
-			<div class="jp-volume-controls">
-				<button class="jp-mute" role="button" tabindex="0">mute</button>
-				<button class="jp-volume-max" role="button" tabindex="0">max volume</button>
-				<div class="jp-volume-bar">
-					<div class="jp-volume-bar-value"></div>
-				</div>
-			</div>
-			<div class="jp-controls-holder">
-				<div class="jp-controls">
-					<button class="jp-play" role="button" tabindex="0">play</button>
-					<button class="jp-stop" role="button" tabindex="0">stop</button>
-				</div>
-				<div class="jp-progress">
-					<div class="jp-seek-bar">
-						<div class="jp-play-bar"></div>
-					</div>
-				</div>
-				<div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
-				<div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-				<div class="jp-toggles">
-					<button class="jp-repeat" role="button" tabindex="0">repeat</button>
-				</div>
-			</div>
-		</div>
-		<div class="jp-details">
-			<div class="jp-title" aria-label="title">&nbsp;</div>
-		</div>
-		<div class="jp-no-solution">
-			<span>Update Required</span>
-			To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-		</div>
-	</div>
-</div>
+
 </body>
 
 </html>
